# PaperPlanes

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  contradictions.py  health.py  memory.py  papers.py  reflections.py
backend/app/api/schema/: chat.py  common.py  contradictions.py  memory.py  papers.py
backend/app/core/: config.py  logging.py
backend/app/core/graph/: builder.py  route.py  state.py
backend/app/core/models/: llm.py
backend/app/memory/: __init__.py  audit.py  contradiction.py  engine.py  graph_traversal.py  mcp_client.py  reflection.py  retriever.py  scoring.py  writer.py
backend/app/scripts/: demo_concurrency.py  init_db.py  mcp_smoke.py  seed_demo.py  seed_memory_demo.py  seed_scale.py
backend/app/services/: arxiv_service.py  pdf_service.py  s3_service.py
backend/app/workers/: reflection_worker.py  scheduler.py
backend/tests/: conftest.py
backend/tests/eval/: README.md  __init__.py  probes.py  run_eval.py  support.py
backend/tests/integration/: test_core_features_live.py  test_health.py
backend/tests/unit/: test_agent_citations.py  test_agent_introspection.py  test_arxiv_service.py  test_auth.py  test_chunker.py  test_chunks_repo.py  test_embed_node.py  test_graph_traversal.py  test_logging.py  test_normalize.py  test_pdf_service.py  test_reflection.py  test_retriever.py  test_retry.py  test_scoring.py  test_writer.py
(+121 files in other folders)
